# interweave

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agents/: rust-reviewer.md  rust-writer.md
.github/workflows/: ci.yml  docs.yml
examples/: bank.rs  custom_object.rs  find_bug.rs  indexer.rs  lastzero.rs  publish.rs  readers.rs  rpc_mux.rs
examples/common/: mod.rs
src/: atomic.rs  executor.rs  explore.rs  lib.rs  object.rs  process.rs  state.rs
src/model/: executor.rs  mod.rs  object.rs  process.rs
src/search/: explore.rs  mod.rs  observer.rs  optimal.rs  step.rs
src/sync/: atomic.rs  channel.rs  mod.rs
