[package]
name = "interweave"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Stateless model checker for concurrent programs, powered by Optimal DPOR."
documentation = "https://docs.rs/interweave"
repository = "https://github.com/egnees/interweave"
homepage = "https://github.com/egnees/interweave"
readme = "README.md"
license = "MIT"
keywords = ["dpor", "model-checking", "concurrency", "interleaving", "stateless"]
categories = ["concurrency", "simulation", "development-tools::testing"]
authors = ["Sergey Yakovlev <3gnees@gmail.com>"]
exclude = ["/.github", "/.claude"]

[dependencies]
thiserror = "2"
